Fix having to hit menu items twice in user account sidebar on mobile

--- a/src/assets/scss/theme/_menu.scss
+++ b/src/assets/scss/theme/_menu.scss
@@ -11,6 +11,7 @@
 
   .main-menu {
     position: fixed;
+    overflow-y: scroll;
     left: 0;
     width: $main-menu-width;
     height: calc(100% - #{$navbar-height});
